helloworld-go.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: helloworld-go
  namespace: default
spec:
  template:
    spec:
      containers:
        - image: ikubernetes/helloworld-go
          env:
            - name: TARGET
              value: "Go Sample v1"
