ksvc.yaml
apiVersion: v1
items:
- apiVersion: serving.knative.dev/v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"serving.knative.dev/v1","kind":"Service","metadata":{"annotations":{},"name":"helloworld-go","namespace":"default"},"spec":{"template":{"spec":{"containers":[{"env":[{"name":"TARGET","value":"Go Sample v1"}],"image":"ikubernetes/helloworld-go"}]}}}}
      serving.knative.dev/creator: admin
      serving.knative.dev/lastModifier: admin
    creationTimestamp: "2022-11-18T02:09:16Z"
    generation: 1
    name: helloworld-go
    namespace: default
    resourceVersion: "1849058"
    uid: ce0f1b26-9617-4cdd-84b8-58436c61151a
  spec:
    template:
      metadata:
        creationTimestamp: null
      spec:
        containerConcurrency: 0
        containers:
        - env:
          - name: TARGET
            value: Go Sample v1
          image: ikubernetes/helloworld-go
          name: user-container
          readinessProbe:
            successThreshold: 1
            tcpSocket:
              port: 0
          resources: {}
        enableServiceLinks: false
        timeoutSeconds: 300
    traffic:
    - latestRevision: true
      percent: 100
  status:
    address:
      url: http://helloworld-go.default.svc.wukui.local
    conditions:
    - lastTransitionTime: "2022-11-18T02:09:28Z"
      status: "True"
      type: ConfigurationsReady
    - lastTransitionTime: "2022-11-18T02:09:29Z"
      message: Waiting for load balancer to be ready
      reason: Uninitialized
      status: Unknown
      type: Ready
    - lastTransitionTime: "2022-11-18T02:09:29Z"
      message: Waiting for load balancer to be ready
      reason: Uninitialized
      status: Unknown
      type: RoutesReady
    latestCreatedRevisionName: helloworld-go-00001
    latestReadyRevisionName: helloworld-go-00001
    observedGeneration: 1
    traffic:
    - latestRevision: true
      percent: 100
      revisionName: helloworld-go-00001
    url: http://helloworld-go.default.example.com
kind: List
metadata:
  resourceVersion: ""
